docs/3.1/events/v1alpha1/index.md
---
permalink: /3.1/events/v1alpha1/
---

# events.v1alpha1



* [amount](amount.md)
* [amqpConsumeConfig](amqpConsumeConfig.md)
* [amqpEventSource](amqpEventSource.md)
* [amqpExchangeDeclareConfig](amqpExchangeDeclareConfig.md)
* [amqpQueueBindConfig](amqpQueueBindConfig.md)
* [amqpQueueDeclareConfig](amqpQueueDeclareConfig.md)
* [argoWorkflowTrigger](argoWorkflowTrigger.md)
* [artifactLocation](artifactLocation.md)
* [awsLambdaTrigger](awsLambdaTrigger.md)
* [azureEventHubsTrigger](azureEventHubsTrigger.md)
* [azureEventsHubEventSource](azureEventsHubEventSource.md)
* [backoff](backoff.md)
* [basicAuth](basicAuth.md)
* [calendarEventSource](calendarEventSource.md)
* [catchupConfiguration](catchupConfiguration.md)
* [condition](condition.md)
* [configMapPersistence](configMapPersistence.md)
* [customTrigger](customTrigger.md)
* [dataFilter](dataFilter.md)
* [dependencyGroup](dependencyGroup.md)
* [emitterEventSource](emitterEventSource.md)
* [eventContext](eventContext.md)
* [eventDependency](eventDependency.md)
* [eventDependencyFilter](eventDependencyFilter.md)
* [eventPersistence](eventPersistence.md)
* [eventSource](eventSource.md)
* [eventSourceSpec](eventSourceSpec.md)
* [eventSourceStatus](eventSourceStatus.md)
* [exprFilter](exprFilter.md)
* [fileArtifact](fileArtifact.md)
* [fileEventSource](fileEventSource.md)
* [genericEventSource](genericEventSource.md)
* [gitArtifact](gitArtifact.md)
* [gitCreds](gitCreds.md)
* [gitRemoteConfig](gitRemoteConfig.md)
* [githubEventSource](githubEventSource.md)
* [gitlabEventSource](gitlabEventSource.md)
* [hdfsEventSource](hdfsEventSource.md)
* [httpTrigger](httpTrigger.md)
* [int64OrString](int64OrString.md)
* [k8SResourcePolicy](k8SResourcePolicy.md)
* [kafkaConsumerGroup](kafkaConsumerGroup.md)
* [kafkaEventSource](kafkaEventSource.md)
* [kafkaTrigger](kafkaTrigger.md)
* [logTrigger](logTrigger.md)
* [metadata](metadata.md)
* [mqttEventSource](mqttEventSource.md)
* [natsAuth](natsAuth.md)
* [natsEventsSource](natsEventsSource.md)
* [natsTrigger](natsTrigger.md)
* [nsqEventSource](nsqEventSource.md)
* [openWhiskTrigger](openWhiskTrigger.md)
* [ownedRepositories](ownedRepositories.md)
* [payloadField](payloadField.md)
* [pubSubEventSource](pubSubEventSource.md)
* [pulsarEventSource](pulsarEventSource.md)
* [redisEventSource](redisEventSource.md)
* [resource](resource.md)
* [resourceEventSource](resourceEventSource.md)
* [resourceFilter](resourceFilter.md)
* [s3Artifact](s3Artifact.md)
* [s3Bucket](s3Bucket.md)
* [s3Filter](s3Filter.md)
* [saslConfig](saslConfig.md)
* [secureHeader](secureHeader.md)
* [selector](selector.md)
* [sensor](sensor.md)
* [sensorSpec](sensorSpec.md)
* [sensorStatus](sensorStatus.md)
* [service](service.md)
* [slackEventSource](slackEventSource.md)
* [slackTrigger](slackTrigger.md)
* [snsEventSource](snsEventSource.md)
* [sqsEventSource](sqsEventSource.md)
* [standardK8STrigger](standardK8STrigger.md)
* [status](status.md)
* [statusPolicy](statusPolicy.md)
* [storageGridEventSource](storageGridEventSource.md)
* [storageGridFilter](storageGridFilter.md)
* [stripeEventSource](stripeEventSource.md)
* [template](template.md)
* [timeFilter](timeFilter.md)
* [tlsConfig](tlsConfig.md)
* [trigger](trigger.md)
* [triggerParameter](triggerParameter.md)
* [triggerParameterSource](triggerParameterSource.md)
* [triggerPolicy](triggerPolicy.md)
* [triggerSwitch](triggerSwitch.md)
* [triggerTemplate](triggerTemplate.md)
* [urlArtifact](urlArtifact.md)
* [valueFromSource](valueFromSource.md)
* [watchPathConfig](watchPathConfig.md)
* [webhookContext](webhookContext.md)